--- a/NutriSystem-Front/package.json
+++ b/NutriSystem-Front/package.json
@@ -23,8 +23,9 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "angularfire2": "^5.2.3",
     "bootstrap": "^4.3.1",
-    "firebase": "^7.3.0",
+    "firebase": "^7.4.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
