--- a/NutriSystem-Front/angular.json
+++ b/NutriSystem-Front/angular.json
@@ -72,8 +72,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "NutriSystem:build",
-            "proxyConfig": "src/proxy.local.json"
+            "browserTarget": "NutriSystem:build"
           },
           "configurations": {
             "production": {
